fix(breadcrumn): text-overflow:ecllipse not working

--- a/packages/react/src/components/Breadcrumb/_breadcrumb.scss
+++ b/packages/react/src/components/Breadcrumb/_breadcrumb.scss
@@ -15,6 +15,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      display: block;
     }
   }
 }
